# quorum-test-project

./: .dockerignore  .pylintrc  Dockerfile  README.md  build_files.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  questions.md  requirements.txt  vercel.json  vercel.json.json
legislative/: apps.py  urls.py  views.py
legislative/services/: __init__.py  base.py  csv_service.py
legislative/templates/: bill_detail.html  index.html  legislator_detail.html  table.html
legislative/tests/: test_bills.py
quorum/: asgi.py  settings.py  urls.py  wsgi.py
